# xtract-rs

./: .gitignore  Cargo.toml  README.md
examples/: brutezip.rs  zipfile_count.rs
src/: error.rs  lib.rs
