[package]
name = "xtract"
version = "0.1.5"
description = "Extract files from Zip and return a array of file buffers"
authors = ["SG <marirs@gmail.com>", "Andrey <andrey@3ig.dev>"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zip = "2"

[lib]
name = "xtract"
path = "src/lib.rs"

[[example]]
name = "brutezip"
path = "examples/brutezip.rs"

[[example]]
name = "zipfile_count"
path = "examples/zipfile_count.rs"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
